# json-event-parser

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  publish.yml
benches/: parser.rs  test_suite.rs
fuzz/: Cargo.toml  build_corpus.py
fuzz/fuzz_targets/: parse.rs
src/: lib.rs  read.rs  write.rs
tests/: drains.rs  errors.rs  test_suite.rs
