[package]
name = "json-event-parser"
version = "0.1.1"
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["JSON"]
repository = "https://github.com/oxigraph/json-event-parser"
homepage = "https://github.com/oxigraph/json-event-parser"
description = """
A JSON event parser and serializer
"""
edition = "2021"
rust-version = "1.64"
exclude = ["JSONTestSuite"]

[dev-dependencies]
criterion = "0.5"
serde_json = "1"

[[bench]]
name = "test_suite"
harness = false